--- a/default_working.conf
+++ b/default_working.conf
@@ -1,30 +1,27 @@
 server {
-        listen 80
+        listen 80;
         listen 443 ssl;
 
-        #server_name localhost;
-        server_name _;
+        server_name localhost;
         ssl_certificate /etc/ssl/certs/nginx.crt;
         ssl_certificate_key /etc/ssl/certs/nginx.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_prefer_server_ciphers on;
         ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;        
         ssl_dhparam /etc/ssl/certs/dhparam.pem;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        ssl_trusted_certificate /etc/ssl/certs/nginx.pem;
+#        ssl_stapling on;
+#        ssl_stapling_verify on;
+#        ssl_trusted_certificate /etc/ssl/certs/nginx.pem
         add_header Strict-Transport-Security "max-age=31536000" always;
         ssl_session_cache   shared:SSL:40m;
         ssl_session_timeout 4h;
         ssl_session_tickets on; 
         root /var/www/html;
-        index index.php index.html;
-
-        server_name localhost;
+        resolver 8.8.8.8 8.8.4.4;
 
 
         location / {
-                try_files $uri $uri/ =404;
+                index index.php index.html;
         }
 
         location ~ \.php$ {
@@ -34,5 +31,3 @@ server {
                 fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
         }
 }
-
-daemon off
