--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,28 +3,38 @@ version: '2'
 services:
   database:
     image: mysql:5.7
+    hostname: prod_server_mysql
     environment: 
       - MYSQL_USER=wordpress
       - MYSQL_PASSWORD=password
       - MYSQL_DATABASE=wordpress
       - MYSQL_RANDOM_ROOT_PASSWORD=true
+      - NODE_ENV=production
+      - HOSTNAME=prod
     networks: 
       - backend
   wordpress:
     image: wordpress:4.9.8
+    hostname: prod_server_wordpress
     depends_on: 
       - database
     environment: 
       - WORDPRESS_DB_HOST=database
       - WORDPRESS_DB_USER=wordpress
       - WORDPRESS_DB_PASSWORD=password
+      - NODE_ENV=production
+      - HOSTNAME=prod
     networks: 
       - backend
       - frontend
   nginx:
     image: nginx:1.15
+    hostname: prod_server_nginx
     depends_on: 
       - wordpress
+    environment:
+      - NODE_ENV=production
+      - HOSTNAME=prod
     volumes:
       - /etc/ssl/private:/etc/ssl/certs
       - /var/www/html:/var/www/html
@@ -41,6 +51,10 @@ services:
 
   fpm:
     image: php:fpm
+    hostname: prod_server_fpm
+    environment:
+      - NODE_ENV=production
+      - HOSTNAME=prod
     volumes:
       - /var/www/html:/var/www/html
       - ./php-fpm.conf:/etc/php/7.2/fpm/php-fpm.conf
